# put1-d-alilo

./: Cargo.toml  Dioxus.toml  README.md  tailwind.config.js
assets/: tailwind.css
src/: main.rs
